--- a/i3blocks/config
+++ b/i3blocks/config
@@ -39,11 +39,11 @@ markup=pango
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 # Set to %any to automatically pick (Requires playerctl >=2.1.1)
-[mediaplayer]
+#[mediaplayer]
 # This picks any player, with vlc as first, and spotify as last choice
-instance=vlc,%any,spotify
-interval=5
-signal=10
+#instance=vlc,%any,spotify
+#interval=5
+#signal=10
 
 
 [volume]
@@ -116,6 +116,7 @@ separator=false
 #
 # The battery instance defaults to 0.
 [battery]
+command=/home/nelisa/.config/i3blocks/scripts/battery2/battery2
 label=BAT
 #label=
 interval=30
